test/sh/error/declare/assign_unassignable_expression.sk
mut x := "this will" / "fail"